FIX: OVERFLOW AND TOPBAR

--- a/css/style.css
+++ b/css/style.css
@@ -114,6 +114,8 @@ main{
     text-align: end;
     vertical-align: middle;
     padding: 0 10px;
+    position: sticky;
+    top: 0;
 
 }
 
@@ -131,7 +133,9 @@ main{
 #body{
     width: 100%;
     background-color: #141922;
+    overflow: auto;
 }
+
 
 /*RECENTLY PLAYED*/
 
@@ -167,10 +171,16 @@ main{
     width: calc(100% / 6);
 }
 
-#popular-artist
+#popular-artist .img-round{
+    aspect-ratio: 1;
+    border-radius: 50%;
+    overflow: hidden;
+}
 
 #popular-artist img{
-    width: 90%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 
